# ResourceCompiler

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  gitupdate.bat  gitupdate.py  renametemplate.bat
.github/workflows/: autobuild.yml  build-linux.yml  build-windows.yml
CMake/: CMakeLists.txt  Configure.cmake  GitUpdate.cmake  rename_initial_template.py
Source/: CMakeLists.txt  Main.cpp
Source/CMake/: ResourceCompiler.cmake
Test/: CMakeLists.txt  Test1.cpp  TestDirectory.h.in  gen_002.txt
